# Full-stack-electricity-agentic-chatbot

./: .gitignore  README.md
Backend/: .env.sample  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Backend/config/: db.yaml  llm.yaml  memory.yaml
Backend/config/env/: production.yaml
Backend/migrations/: supabase_setup01.sql  supabase_setup02.sql  supabase_setup03.sql  supabase_setup04.sql
Backend/src/: main.py
Backend/src/agents/: chat_agent.py  memory_manager.py  nl_to_sql.py
Backend/src/api/: auth.py  chat.py  deps.py
Backend/src/db/: __init__.py  client.py
Backend/src/middleware/: audit_logger.py  jwt_auth.py  rate_limiter.py
Backend/src/models/: __init__.py  chat.py  user.py
Backend/src/prompts/: personalization.yaml  sql_generator.yaml  system_prompt.yaml
Backend/src/services/: __init__.py  auth_service.py  cache_service.py  chat_service.py  preference_service.py
Backend/src/utils/: __init__.py  config_loader.py  id_generator.py  jwt_utils.py  llm_router.py  sql_validator.py
Backend/src/workers/: preference_worker.py
Backend/tests/: test_chat_agent.py  test_e2e_full.py  test_embeddings.py  test_llm_router.py  test_preferences.py  test_sql_generation.py
frontend/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useChatSession.ts
frontend/src/pages/: Login.tsx  Profile.tsx  Signup.tsx
frontend/src/services/: api.ts  auth.ts  chat.ts
(+13 files in other folders)
